# lst-bot

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-Hans.md  justfile  prek.toml  pyproject.toml
.github/workflows/: release.yml  test.yml
app/: agent.py  main.py
app/systemd/: lst-bot.service
src/lst_bot/clients/hitokoto/: client.py  models.py
src/lst_bot/clients/klei/: enums.py
src/lst_bot/core/: bot.py  di.py  scheduler.py
src/lst_bot/gateways/: base.py  onebot11.py  onebot12.py
src/lst_bot/routing/: cmd.py  route.py  router.py  rule.py
tests/: conftest.py
tests/clients/: test_hitokoto.py  test_klei.py  test_lst.py
tests/core/: test_bot.py  test_dispatch.py  test_logging.py  test_scheduler.py
tests/gateways/: support.py  test_base.py
tests/gateways/onebot11/: support.py  test_action.py  test_http_webhook.py  test_websocket.py
tests/gateways/onebot12/: support.py  test_action.py  test_http_webhook.py  test_websocket.py
tests/protocol/: test_actions.py  test_common.py  test_events.py  test_messages.py
tests/routing/: test_router.py
